package AccountAuthentication;

message CreateAccount {
  required uint64 requestId = 1;
  required string email = 2;
  required string plaintextPassword = 3;
}

message CreateAccountSuccess {
  required uint64 requestId = 1;
  required uint64 userId = 2;
}

message CreateAccountFailure {
  required uint64 requestId =1;
  enum CreateFailureReason{
    ACCOUNT_ALREADY_EXISTS = 0;
	INVALID_PASSWORD = 1;
	INTERNAL_SERVER_ERROR = 2;
  }
  
  required CreateFailureReason reason = 2 [default = INTERNAL_SERVER_ERROR];
}

message AuthenticateAccount {
  required uint64 requestId = 1;
  required string email = 2;
  required string plaintextPassword = 3;
}

message AuthenticateAccountSuccess {
  required uint64 requestId = 1;
  required uint64 userId = 2;
  required string creationDate = 3;
}

message AuthenticateAccountFailure {
  required uint64 requestId =1;
  enum AuthenticateFailureReason{
    INVALID_CREDENTIALS = 0;
	INTERNAL_SERVER_ERROR = 1;
  }
  
  required AuthenticateFailureReason reason = 2 [default = INTERNAL_SERVER_ERROR];
}



